--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="theme-color" content="#5E9CA0">
+    <meta name="theme-color" content="#0D47A1">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/colors.css') }}">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Register - Mental Health AI Chatbot</title>
