--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1039,8 +1039,9 @@
             }
             
             #sendButton {
-                width: 48px;
-                height: 48px;
+                width: 40px;
+                height: 40px;
+                min-height: 40px;
             }
             
             .modal-content {
