--- a/templates/chat.html
+++ b/templates/chat.html
@@ -707,10 +707,11 @@
             background: var(--gradient);
             color: white;
             border: none;
-            width: 45px;
-            height: 45px;
+            width: 40px;
+            height: 40px;
+            min-height: 40;
             border-radius: 50%;
-            margin-left: 12px;
+            margin-left: 10px;
             cursor: pointer;
             display: flex;
             align-items: center;
